# rabbitai

./: .gitignore  README.md  pyproject.toml
rabbitai/: agent.py  cli.py  config.py  reactagent.py
rabbitai/context/: system.py
rabbitai/llm/: gemini.py  ollama.py
rabbitai/tools/: executor.py
