[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rabbitai"
version = "0.1.0"
description = "AI-powered CLI troubleshooting assistant"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RabbitAI Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.40",
    "langchain-google-genai>=1.0.0",
    "langchain-community>=0.0.20",
    "prompt_toolkit>=3.0.0",
    "rich>=10.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
rabbit = "rabbitai.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["rabbitai", "rabbitai.llm", "rabbitai.tools", "rabbitai.context", "rabbitai.command_config"]
